Color Contrast fixed

--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -188,7 +188,7 @@
   a {
     display: flex;
     align-items: center;
-    color: $blue;
+    color: $dark;
     text-transform: uppercase;
     letter-spacing: 2px;
     margin-top: $sm;
